Update franchise group IDs in UserProfile and ExecutorProfile, and enhance env.example with detailed contact group information

--- a/env.example
+++ b/env.example
@@ -48,6 +48,18 @@ SUPPORT_CONTACT_GROUP_ID=32
 # Template ID для контактов поддержки (по умолчанию 1)
 SUPPORT_CONTACT_TEMPLATE_ID=1
 
+# Группы контактов (концепции) для фильтрации ресторанов
+# Эти ID используются в коде для определения концепций ресторанов
+# Чтобы получить список всех групп контактов, запустите: python list_statuses_and_groups.py
+# Текущие концепции (настроены в config/__init__.py):
+#   12 - Мясоroob
+#   14 - Аджикинежаль
+#   16 - У Беллуччи Круче
+#   20 - Хинкальцы
+#   22 - CHICKO
+#   28 - Во все ребра
+#   30 - ДжоДжа
+
 # Runtime configuration
 DB_PATH=bot.db
 LOG_LEVEL=INFO
