Add webhook server configuration to env.example and enhance run.py for dynamic webhook host/port handling
Updated env.example to include webhook server settings. Modified run.py to dynamically set webhook host and port based on command-line arguments or .env values, with added security warnings for public access. Improved logging to provide clear webhook URLs based on the host configuration.

--- a/env.example
+++ b/env.example
@@ -66,3 +66,11 @@ LOG_LEVEL=INFO
 PLANFIX_POLL_INTERVAL=60
 TELEGRAM_ADMIN_IDS=123456789,987654321
 
+# Webhook server configuration
+# Хост для webhook сервера (127.0.0.1 - только локальный доступ, 0.0.0.0 - все интерфейсы)
+# ВНИМАНИЕ: 0.0.0.0 делает сервер доступным извне! Используйте только если знаете, что делаете.
+# Для публичного доступа рекомендуется использовать nginx или другой прокси перед ботом.
+WEBHOOK_HOST=127.0.0.1
+# Порт для webhook сервера
+WEBHOOK_PORT=8080
+
