Remove outdated documentation files and refactor main entry point for improved clarity and functionality
Deleted several obsolete markdown files related to backup instructions, database clearing, code analysis, and user deletion processes. Updated the main entry point from `run.py` to `main.py`, consolidating the bot and webhook server functionalities into a single script. This change enhances the project's structure and simplifies the startup process for users.

--- a/telegram-planfix-bot.service
+++ b/telegram-planfix-bot.service
@@ -10,7 +10,7 @@ WorkingDirectory=/home/dev_bot/telegram_planfix_bot
 Environment="PATH=/home/dev_bot/telegram_planfix_bot/venv/bin"
 Environment="SYSTEMD_SERVICE=1"
 Environment="LOG_DIR=/home/dev_bot/telegram_planfix_bot/logs"
-ExecStart=/home/dev_bot/telegram_planfix_bot/venv/bin/python3 /home/dev_bot/telegram_planfix_bot/run.py --mode both
+ExecStart=/home/dev_bot/telegram_planfix_bot/venv/bin/python3 /home/dev_bot/telegram_planfix_bot/main.py
 Restart=always
 RestartSec=10
 StandardOutput=journal
